--- a/index.html
+++ b/index.html
@@ -53,18 +53,17 @@
                 <label class='wow text animate__animated animate__fadeIn'>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus, 
                         sunt! Nihil amet commodi accusantium est. Molestiae in accusantium
-                        totam neque quis corporis cum consectetur deleniti assumenda, rerum, laboriosam Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus, 
-                        sunt! Nihil amet commodi accusantium est. Molestiae in accusantium
-                        totam Lorem ipsum, dolor sit amet consectetur adipisicing elit. Architecto aperiam quidem dolore officia temporibus corporis eos. neque quis corporis cum consectetur deleniti assumenda, rerum, laboriosam voluptates harum!
+                        totam neque dolor sit amet consectetur adipisicing elit. Architecto aperiam quidem dolore officia temporibus corporis eos. neque quis corporis cum consectetur deleniti assumenda, rerum, laboriosam voluptates harum!
                     </p>
+                    <p class="para">Find me <a href="https://www.somewhereinblog.net/blog/tanjimrahman?fbclid=IwAR3LNaDvPAG_sZa_slqd2Z5pyciTHufnFLrZNBrvJRTlaWkfdEls_OWnGD0" target="_blank">Somewhere in Blog.</a></p>
                 </label>
                 <div class="link-icon wow animate__animated animate__flipInY">
-                    <a href="#"><i class="fa fa-youtube" aria-hidden="true"></i></a>
-                    <a href="#"><i class='fa fa-twitter' aria-hidden="true"></i></a>
-                    <a href="#"><i class='fa fa-facebook' aria-hidden="true"></i></a>
-                    <a href="#"><i class='fa fa-instagram' aria-hidden="true"></i></a>
-                    <a href="#"><i class='fa fa-pinterest-p' aria-hidden="true"></i></a>
-                    <a href="#"><i class='fa fa-flickr' aria-hidden="true"></i></a>
+                    <a href="https://www.youtube.com/c/TanjimRahman" target="_blank"><i class="fa fa-youtube" aria-hidden="true"></i></a>
+                    <a href="https://twitter.com/tanjimrhmn?fbclid=IwAR0-Nz0-U9BxZAZ63-NxLXdrKx5tnLh1gT8nxCvDIvLrMXntu6JXE0Mrv_k" target="_blank"><i class='fa fa-twitter' aria-hidden="true"></i></a>
+                    <a href="https://www.facebook.com/rahman.tanjim" target="_blank"><i class='fa fa-facebook' aria-hidden="true"></i></a>
+                    <a href="https://www.instagram.com/rahman_tanjim/?fbclid=IwAR2cyP-wHanj1qThlnmjwKrBFmNpPfqtvPuZ5m-Rdh8PHrYv74fdCOKEm0g" target="_blank"><i class='fa fa-instagram' aria-hidden="true"></i></a>
+                    <a href="https://www.pinterest.com/rahmantanjim/?fbclid=IwAR1jz16QWyh78ACPFnTKIYA1xpESCiRmZQ6HNY3zqmpl7GVZOSSaacJA-lI" target="_blank"><i class='fa fa-pinterest-p' aria-hidden="true"></i></a>
+                    <a href="https://www.flickr.com/photos/tanjim" target="_blank"><i class='fa fa-flickr' aria-hidden="true"></i></a>
                 </div>
             </div>
     </section>
@@ -82,15 +81,15 @@
             <div class='port-content'>
                 <div class="cont">
                     <i class="fa fa-500px"></i></br>
-                    <a href="#">500px</a>
+                    <a href="https://500px.com/p/tanjimm?fbclid=IwAR2s1dHapOYSXRmWEUyqddBILHZpVasyxhFp9aHAn1riO6mNameT8dO_yHM&view=photos" target="_blank">500px</a>
                 </div>
                 <div class="cont">
                     <i class="fa fa-linkedin-square"></i> <br>
-                    <a href="#">LinkdIn</a>
+                    <a href="https://www.linkedin.com/in/rahmantanjim/?fbclid=IwAR3a9gPM3uS2LYkNJa4s1I0TZJnap67Gf6opSoAunhxeqAesVzq4U76A2mg" target="_blank">LinkdIn</a>
                 </div>
                 <div class="cont">
                     <h4>ResearchGate</h4>
-                    <a href="#">ResearchGate</a>
+                    <a href="https://www.researchgate.net/profile/Md-Tanjim-Rahman?fbclid=IwAR2CgbmDtnqEkM-Dz-ZWyrPdEtjC6ISh8nsIg-HdbRjUtVbhonWM3qqybng" target="_blank">ResearchGate</a>
                 </div>
             </div>
     </section>
@@ -99,11 +98,11 @@
         <div class='box'>
             <h2>Contact</h2>
             <p><i class='fa fa-phone'></i>Phone: &nbsp;+0123343456</p>
-            <p><i class='fa fa-envelope'></i><a href='#'>E-mail: &nbsp;aerewr@asd.com</a></p>
+            <p><i class='fa fa-envelope'></i>E-mail:<a href='https://www.rahman.tanjim@gmail.com' target="_blank"> &nbsp;rahman.tanjim@gmail.com</a></p>
         </div>
         <div class='box'>
             <h2>Address</h2>
-            <address><i class='fa fa-location-arrow'></i>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, quisquam.</address>
+            <address><i class='fa fa-location-arrow'></i>Lorem ipsum dolor sit.</address>
         </div>
     </section>
     <section class='top'>
