--- a/index.html
+++ b/index.html
@@ -51,9 +51,17 @@
                 <div id='portfolio'></div>
                 <img src="images/tj.jpg" class='wow animate__animated animate__fadeInUp'>
                 <label class='wow text animate__animated animate__fadeIn'>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus, 
-                        sunt! Nihil amet commodi accusantium est. Molestiae in accusantium
-                        totam neque dolor sit amet consectetur adipisicing elit. Architecto aperiam quidem dolore officia temporibus corporis eos. neque quis corporis cum consectetur deleniti assumenda, rerum, laboriosam voluptates harum!
+                    <p>
+                        My name is Tanjim Rahman and I grew up in Joypurhat, Bangladesh. Being a fresh Law graduate from the University of Rajshahi, I received my LL.B in the year of 2019. I am an avid researcher and learner of the present Legal phenomenon, development and conflicts all around the world. During the years of my graduation, I studied International Law, Laws relating to succession, Tax Laws and other statutory Laws on Civil and Criminal matters and also attended mock trials and seminars arranged by University of Rajshahi. 
+                    </p>
+                    <p>
+                        At present, I am pursuing my LL.M in International Law, specialized on International Trade Law, International Humanitarian Law and Human Rights Laws as some of my majors. To that end, I hope to continue my higher studies in the field of Humanitarian and Human Right Laws. 
+                    </p>
+                    <p>
+                        Apart from that, I also love photography and capturing photos since 2012, I hope to become a better photographer and visual artist as a hobbyist photographer.
+                    </p>
+                    <p>
+                        I will continue my higher studies in Law and someday work as an advocate or a legal counsellor professionally to gain some experience in the Legal arena of Bangladesh. 
                     </p>
                     <p class="para">Find me <a href="https://www.somewhereinblog.net/blog/tanjimrahman?fbclid=IwAR3LNaDvPAG_sZa_slqd2Z5pyciTHufnFLrZNBrvJRTlaWkfdEls_OWnGD0" target="_blank">Somewhere in Blog.</a></p>
                 </label>
@@ -76,8 +84,9 @@
                 <i class='fa fa-tree'></i>
                 <span></span>
             </div>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit, porro provident, ad fuga quos culpa quod, in ipsa perspiciatis laboriosam ab vero enim iste saepe quam nihil! Saepe rerum suscipit ullam laborum ipsa ratione omnis? Lorem,
-                ipsum dolor sit amet consectetur adipisicing elit. Quam facere aperiam in iure labore vitae iste animi quidem rem ex?</p>
+            <p>
+                My career goals are not quite set yet, but I strive to learn about anything new, every day, as much as I can. I am also passionate about photography. See my works 500px and Flickr.
+            </p>
             <div class='port-content'>
                 <div class="cont">
                     <i class="fa fa-500px"></i></br>
@@ -97,12 +106,12 @@
     <section class='footer'>
         <div class='box'>
             <h2>Contact</h2>
-            <p><i class='fa fa-phone'></i>Phone: &nbsp;+0123343456</p>
+            <p><i class='fa fa-phone'></i>Phone: &nbsp;+8801990888101,<br>&emsp14;&nbsp;+8801751952397</p>
             <p><i class='fa fa-envelope'></i>E-mail:<a href='https://www.rahman.tanjim@gmail.com' target="_blank"> &nbsp;rahman.tanjim@gmail.com</a></p>
         </div>
         <div class='box'>
             <h2>Address</h2>
-            <address><i class='fa fa-location-arrow'></i>Lorem ipsum dolor sit.</address>
+            <i class='fa fa-location-arrow'></i><address>"Chayabithi",895A,Sagarpara,Joypurhat.</address>
         </div>
     </section>
     <section class='top'>
