--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 <span></span>
             </div>
             <p>
-                My career goals are not quite set yet, but I strive to learn about anything new, every day, as much as I can. I am also passionate about photography. See my works 500px and Flickr.
+                My career goals are not quite set yet, but I strive to learn about anything new, every day, as much as I can. I am also passionate about photography. See my works on 500px.
             </p>
             <div class='port-content'>
                 <div class="cont">
