--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     <p>
                         I will continue my higher studies in Law and someday work as an advocate or a legal counsellor professionally to gain some experience in the Legal arena of Bangladesh. 
                     </p>
-                    <p class="para">Find me <a href="https://www.somewhereinblog.net/blog/tanjimrahman?fbclid=IwAR3LNaDvPAG_sZa_slqd2Z5pyciTHufnFLrZNBrvJRTlaWkfdEls_OWnGD0" target="_blank">Somewhere in Blog.</a></p>
+                    <p class="para">Find me on &nbsp;<a href="https://www.somewhereinblog.net/blog/tanjimrahman?fbclid=IwAR3LNaDvPAG_sZa_slqd2Z5pyciTHufnFLrZNBrvJRTlaWkfdEls_OWnGD0" target="_blank">LinkedIn</a></p>
                 </label>
                 <div class="link-icon wow animate__animated animate__flipInY">
                     <a href="https://www.youtube.com/c/TanjimRahman" target="_blank"><i class="fa fa-youtube" aria-hidden="true"></i></a>
