TJ personal website completed

--- a/index.html
+++ b/index.html
@@ -54,12 +54,16 @@
                     <p>
                         My name is Tanjim Rahman and I grew up in Joypurhat, Bangladesh. Being a fresh Law graduate from the University of Rajshahi, I received my LL.B in the year of 2019. I am an avid researcher and learner of the present Legal phenomenon, development and conflicts all around the world. During the years of my graduation, I studied International Law, Laws relating to succession, Tax Laws and other statutory Laws on Civil and Criminal matters and also attended mock trials and seminars arranged by University of Rajshahi. 
                     </p>
+
+                    <br>
                     <p>
                         At present, I am pursuing my LL.M in International Law, specialized on International Trade Law, International Humanitarian Law and Human Rights Laws as some of my majors. To that end, I hope to continue my higher studies in the field of Humanitarian and Human Right Laws. 
                     </p>
+                    <br>
                     <p>
                         Apart from that, I also love photography and capturing photos since 2012, I hope to become a better photographer and visual artist as a hobbyist photographer.
                     </p>
+                    <br>
                     <p>
                         I will continue my higher studies in Law and someday work as an advocate or a legal counsellor professionally to gain some experience in the Legal arena of Bangladesh. 
                     </p>
@@ -113,6 +117,10 @@
             <h2>Address</h2>
             <i class='fa fa-location-arrow'></i><address>"Chayabithi",895A,Sagarpara,Joypurhat.</address>
         </div>
+    </section>
+    <section class="design-copyright">
+        <p>Designed By FlyingZephyr</p>
+        <p>E-mail me: zannat.rezuanul.srv@gmail.com</p>
     </section>
     <section class='top'>
         <i class='fa fa-arrow-up'></i>
